tests/error/poly_errors/nested_generic.err
Error: Unsupported (at $FILE:8:4)
  | 
6 | @guppy
7 | def foo() -> None:
8 |     def bar(x: T) -> T:
  |     ^^^^^^^^^^^^^^^^^^^
9 |         return x
  | ^^^^^^^^^^^^^^^^ Nested generic function definitions are not supported

Guppy compilation failed due to 1 previous error
